// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/qrcode/demo/Popover.tsx extend context correctly 1`] = `
Array [
  <img
    alt="icon"
    height="100"
    src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
    width="100"
  />,
  <div>
    <div
      class="ant-popover"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-qrcode"
              style="width:160px;height:160px"
            >
              <canvas
                height="140"
                style="height:140px;width:140px"
                width="140"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/qrcode/demo/base.tsx extend context correctly 1`] = `
<div
  class="ant-qrcode"
  style="width:160px;height:160px"
>
  <canvas
    height="140"
    style="height:140px;width:140px"
    width="140"
  />
</div>
`;

exports[`renders ./components/qrcode/demo/customColor.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-qrcode"
    style="margin-bottom:12px;width:160px;height:160px"
  >
    <canvas
      height="140"
      style="height:140px;width:140px"
      width="140"
    />
  </div>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Change Color
    </span>
  </button>,
  <div>
    <div
      class="ant-popover"
      style="opacity:0"
    >
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-arrow"
        >
          <span
            class="ant-popover-arrow-content"
          />
        </div>
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="sketch-picker "
              style="width:200px;padding:10px 10px 0;box-sizing:initial;background:#fff;-ms-border-radius:4px;-moz-border-radius:4px;-o-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;-ms-box-shadow:0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);-moz-box-shadow:0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);-o-box-shadow:0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);-webkit-box-shadow:0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);box-shadow:0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15)"
            >
              <div
                style="width:100%;padding-bottom:75%;position:relative;overflow:hidden"
              >
                <div
                  style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;background:hsl(100.23529411764706,100%, 50%)"
                >
                  <style>
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
                  </style>
                  <div
                    class="saturation-white"
                    style="position:absolute;top:0px;right:0px;bottom:0px;left:0px"
                  >
                    <div
                      class="saturation-black"
                      style="position:absolute;top:0px;right:0px;bottom:0px;left:0px"
                    />
                    <div
                      style="position:absolute;top:23.137254901960773%;left:86.73469387755102%;cursor:default"
                    >
                      <div
                        style="width:4px;height:4px;-ms-box-shadow:0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4);-moz-box-shadow:0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4);-o-box-shadow:0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4);-webkit-box-shadow:0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4);box-shadow:0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4);-ms-border-radius:50%;-moz-border-radius:50%;-o-border-radius:50%;-webkit-border-radius:50%;border-radius:50%;cursor:hand;-ms-transform:translate(-2px, -2px);-moz-transform:translate(-2px, -2px);-o-transform:translate(-2px, -2px);-webkit-transform:translate(-2px, -2px);transform:translate(-2px, -2px)"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flexbox-fix"
                style="display:flex"
              >
                <div
                  style="padding:4px 0;-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1"
                >
                  <div
                    style="position:relative;height:10px;overflow:hidden"
                  >
                    <div
                      style="position:absolute;top:0px;right:0px;bottom:0px;left:0px"
                    >
                      <div
                        class="hue-horizontal"
                        style="padding:0 2px;position:relative;height:100%"
                      >
                        <style>
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
                        </style>
                        <div
                          style="position:absolute;left:27.84313725490196%"
                        >
                          <div
                            style="margin-top:1px;width:4px;-ms-border-radius:1px;-moz-border-radius:1px;-o-border-radius:1px;-webkit-border-radius:1px;border-radius:1px;height:8px;-ms-box-shadow:0 0 2px rgba(0, 0, 0, .6);-moz-box-shadow:0 0 2px rgba(0, 0, 0, .6);-o-box-shadow:0 0 2px rgba(0, 0, 0, .6);-webkit-box-shadow:0 0 2px rgba(0, 0, 0, .6);box-shadow:0 0 2px rgba(0, 0, 0, .6);background:#fff;-ms-transform:translateX(-2px);-moz-transform:translateX(-2px);-o-transform:translateX(-2px);-webkit-transform:translateX(-2px);transform:translateX(-2px)"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    style="position:relative;height:10px;margin-top:4px;overflow:hidden"
                  >
                    <div
                      style="position:absolute;top:0px;right:0px;bottom:0px;left:0px"
                    >
                      <div
                        style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;overflow:hidden"
                      >
                        <div
                          style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;background:url(null) center left"
                        />
                      </div>
                      <div
                        style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;background:linear-gradient(to right, rgba(82,196,26, 0) 0%,
           rgba(82,196,26, 1) 100%)"
                      />
                      <div
                        style="position:relative;height:100%;margin:0 3px"
                      >
                        <div
                          style="position:absolute;left:100%"
                        >
                          <div
                            style="width:4px;-ms-border-radius:1px;-moz-border-radius:1px;-o-border-radius:1px;-webkit-border-radius:1px;border-radius:1px;height:8px;-ms-box-shadow:0 0 2px rgba(0, 0, 0, .6);-moz-box-shadow:0 0 2px rgba(0, 0, 0, .6);-o-box-shadow:0 0 2px rgba(0, 0, 0, .6);-webkit-box-shadow:0 0 2px rgba(0, 0, 0, .6);box-shadow:0 0 2px rgba(0, 0, 0, .6);background:#fff;margin-top:1px;-ms-transform:translateX(-2px);-moz-transform:translateX(-2px);-o-transform:translateX(-2px);-webkit-transform:translateX(-2px);transform:translateX(-2px)"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  style="width:24px;height:24px;position:relative;margin-top:4px;margin-left:4px;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px"
                >
                  <div
                    style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;background:url(null) center left"
                  />
                  <div
                    style="position:absolute;top:0px;right:0px;bottom:0px;left:0px;-ms-border-radius:2px;-moz-border-radius:2px;-o-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;background:rgba(82,196,26,1);-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25)"
                  />
                </div>
              </div>
              <div
                class="flexbox-fix"
                style="display:flex;padding-top:4px"
              >
                <div
                  style="-webkit-box-flex:2;-moz-box-flex:2;-webkit-flex:2;-ms-flex:2;flex:2"
                >
                  <div
                    style="position:relative"
                  >
                    <input
                      id="rc-editable-input-1"
                      spellcheck="false"
                      style="width:80%;padding:4px 10% 3px;border:none;-ms-box-shadow:inset 0 0 0 1px #ccc;-moz-box-shadow:inset 0 0 0 1px #ccc;-o-box-shadow:inset 0 0 0 1px #ccc;-webkit-box-shadow:inset 0 0 0 1px #ccc;box-shadow:inset 0 0 0 1px #ccc;font-size:11px"
                      value="52C41A"
                    />
                    <label
                      for="rc-editable-input-1"
                      style="display:block;text-align:center;font-size:11px;color:#222;padding-top:3px;padding-bottom:4px;text-transform:capitalize"
                    >
                      hex
                    </label>
                  </div>
                </div>
                <div
                  style="-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;padding-left:6px"
                >
                  <div
                    style="position:relative"
                  >
                    <input
                      id="rc-editable-input-2"
                      spellcheck="false"
                      style="width:80%;padding:4px 10% 3px;border:none;-ms-box-shadow:inset 0 0 0 1px #ccc;-moz-box-shadow:inset 0 0 0 1px #ccc;-o-box-shadow:inset 0 0 0 1px #ccc;-webkit-box-shadow:inset 0 0 0 1px #ccc;box-shadow:inset 0 0 0 1px #ccc;font-size:11px"
                      value="82"
                    />
                    <label
                      for="rc-editable-input-2"
                      style="display:block;text-align:center;font-size:11px;color:#222;padding-top:3px;padding-bottom:4px;text-transform:capitalize;cursor:ew-resize"
                    >
                      r
                    </label>
                  </div>
                </div>
                <div
                  style="-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;padding-left:6px"
                >
                  <div
                    style="position:relative"
                  >
                    <input
                      id="rc-editable-input-3"
                      spellcheck="false"
                      style="width:80%;padding:4px 10% 3px;border:none;-ms-box-shadow:inset 0 0 0 1px #ccc;-moz-box-shadow:inset 0 0 0 1px #ccc;-o-box-shadow:inset 0 0 0 1px #ccc;-webkit-box-shadow:inset 0 0 0 1px #ccc;box-shadow:inset 0 0 0 1px #ccc;font-size:11px"
                      value="196"
                    />
                    <label
                      for="rc-editable-input-3"
                      style="display:block;text-align:center;font-size:11px;color:#222;padding-top:3px;padding-bottom:4px;text-transform:capitalize;cursor:ew-resize"
                    >
                      g
                    </label>
                  </div>
                </div>
                <div
                  style="-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;padding-left:6px"
                >
                  <div
                    style="position:relative"
                  >
                    <input
                      id="rc-editable-input-4"
                      spellcheck="false"
                      style="width:80%;padding:4px 10% 3px;border:none;-ms-box-shadow:inset 0 0 0 1px #ccc;-moz-box-shadow:inset 0 0 0 1px #ccc;-o-box-shadow:inset 0 0 0 1px #ccc;-webkit-box-shadow:inset 0 0 0 1px #ccc;box-shadow:inset 0 0 0 1px #ccc;font-size:11px"
                      value="26"
                    />
                    <label
                      for="rc-editable-input-4"
                      style="display:block;text-align:center;font-size:11px;color:#222;padding-top:3px;padding-bottom:4px;text-transform:capitalize;cursor:ew-resize"
                    >
                      b
                    </label>
                  </div>
                </div>
                <div
                  style="-webkit-box-flex:1;-moz-box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;padding-left:6px"
                >
                  <div
                    style="position:relative"
                  >
                    <input
                      id="rc-editable-input-5"
                      spellcheck="false"
                      style="width:80%;padding:4px 10% 3px;border:none;-ms-box-shadow:inset 0 0 0 1px #ccc;-moz-box-shadow:inset 0 0 0 1px #ccc;-o-box-shadow:inset 0 0 0 1px #ccc;-webkit-box-shadow:inset 0 0 0 1px #ccc;box-shadow:inset 0 0 0 1px #ccc;font-size:11px"
                      value="100"
                    />
                    <label
                      for="rc-editable-input-5"
                      style="display:block;text-align:center;font-size:11px;color:#222;padding-top:3px;padding-bottom:4px;text-transform:capitalize;cursor:ew-resize"
                    >
                      a
                    </label>
                  </div>
                </div>
              </div>
              <div
                class="flexbox-fix"
                style="margin:0 -10px;padding:10px 0 0 10px;border-top:1px solid #eee;display:flex;flex-wrap:wrap;position:relative"
              >
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#D0021B;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#D0021B"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#F5A623;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#F5A623"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#F8E71C;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#F8E71C"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#8B572A;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#8B572A"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#7ED321;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#7ED321"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#417505;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#417505"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#BD10E0;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#BD10E0"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#9013FE;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#9013FE"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#4A90E2;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#4A90E2"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#50E3C2;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#50E3C2"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#B8E986;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#B8E986"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#000000;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#000000"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#4A4A4A;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#4A4A4A"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#9B9B9B;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#9B9B9B"
                    />
                  </span>
                </div>
                <div
                  style="width:16px;height:16px;margin:0 10px 10px 0"
                >
                  <span>
                    <div
                      style="background:#FFFFFF;height:100%;width:100%;cursor:pointer;position:relative;outline:none;-ms-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;-ms-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-moz-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-o-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);-webkit-box-shadow:inset 0 0 0 1px rgba(0,0,0,.15);box-shadow:inset 0 0 0 1px rgba(0,0,0,.15)"
                      tabindex="0"
                      title="#FFFFFF"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/qrcode/demo/customSize.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-btn-group"
    style="margin-bottom:16px"
  >
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span
        aria-label="minus"
        class="anticon anticon-minus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="minus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M872 474H152c-4.4 0-8 3.6-8 8v60c0 4.4 3.6 8 8 8h720c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <span>
        Smaller
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span
        aria-label="plus"
        class="anticon anticon-plus"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="plus"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <defs>
            <style />
          </defs>
          <path
            d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
          />
          <path
            d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
          />
        </svg>
      </span>
      <span>
        Larger
      </span>
    </button>
  </div>,
  <div
    class="ant-qrcode"
    style="width:160px;height:160px"
  >
    <canvas
      height="140"
      style="height:140px;width:140px"
      width="140"
    />
    <img
      src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
      style="display:none"
    />
  </div>,
]
`;

exports[`renders ./components/qrcode/demo/download.tsx extend context correctly 1`] = `
<div
  id="myqrcode"
>
  <div
    class="ant-qrcode"
    style="margin-bottom:16px;width:160px;height:160px"
  >
    <canvas
      height="140"
      style="height:140px;width:140px"
      width="140"
    />
  </div>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Download
    </span>
  </button>
</div>
`;

exports[`renders ./components/qrcode/demo/errorlevel.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-qrcode"
    style="margin-bottom:16px;width:160px;height:160px"
  >
    <canvas
      height="140"
      style="height:140px;width:140px"
      width="140"
    />
  </div>,
  <div
    class="ant-segmented"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="L"
        >
          L
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="M"
        >
          M
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Q"
        >
          Q
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="H"
        >
          H
        </div>
      </label>
    </div>
  </div>,
]
`;

exports[`renders ./components/qrcode/demo/icon.tsx extend context correctly 1`] = `
<div
  class="ant-qrcode"
  style="width:160px;height:160px"
>
  <canvas
    height="140"
    style="height:140px;width:140px"
    width="140"
  />
  <img
    src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
    style="display:none"
  />
</div>
`;

exports[`renders ./components/qrcode/demo/status.tsx extend context correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
  style="flex-wrap:wrap;margin-bottom:-8px"
>
  <div
    class="ant-space-item"
    style="margin-right:8px;padding-bottom:8px"
  >
    <div
      class="ant-qrcode"
      style="width:160px;height:160px"
    >
      <div
        class="ant-qrcode-mask"
      >
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <canvas
        height="140"
        style="height:140px;width:140px"
        width="140"
      />
    </div>
  </div>
  <div
    class="ant-space-item"
    style="padding-bottom:8px"
  >
    <div
      class="ant-qrcode"
      style="width:160px;height:160px"
    >
      <div
        class="ant-qrcode-mask"
      >
        <p>
          QRCode is expired
        </p>
        <button
          class="ant-btn ant-btn-link"
          type="button"
        >
          <span
            aria-label="reload"
            class="anticon anticon-reload"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="reload"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
              />
            </svg>
          </span>
          <span>
            click refresh
          </span>
        </button>
      </div>
      <canvas
        height="140"
        style="height:140px;width:140px"
        width="140"
      />
    </div>
  </div>
</div>
`;
